# janus-plugin-sfu

./: Cargo.toml  README.md
docker/: Dockerfile  README.md  docker-compose.yml  g_list_free_pts.patch  start.sh
docker/confs/: janus.jcfg  janus.jcfg.sample  janus.transport.http.jcfg
docs/: api.md
src/: lib.rs  messages.rs  sessions.rs  txid.rs
