[package]
name = "janus-plugin-sfu"
description = "Janus SFU for game networking."
edition = "2018"
version = "0.1.0"
authors = ["Marshall Polaris <marshall@pol.rs>"]
readme = "README.md"
repository = "https://github.com/mozilla/janus-plugin-sfu"
license = "MPL-2.0"
publish = false

[lib]
crate_type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
glib-sys = "0.19"
janus-plugin = "0.13"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust-ini = "0.13"
jsonwebtoken = "7.2"
num_cpus = "1.16.0"

[patch.crates-io]
janus-plugin-sys = { git = "https://github.com/networked-aframe/janus-plugin-rs", branch = "master" }
janus-plugin = { git = "https://github.com/networked-aframe/janus-plugin-rs", branch = "master" }
